sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:21: error: value ! is not a member of Boolean
   	if(c!){return}
            ^